Updates to work with new Components implementation

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@serverless/knative-build",
   "version": "0.1.0",
-  "main": "./serverless.js",
+  "main": "./src/serverless.js",
   "publishConfig": {
     "access": "public"
   },
@@ -12,15 +12,15 @@
   "author": "Serverless, Inc.",
   "license": "Apache",
   "dependencies": {
-    "@serverless/core": "^1.1.1",
-    "ramda": "^0.26.1"
+    "@serverless/core": "^1.1.2"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
     "eslint": "^5.6.0",
-    "eslint-config-prettier": "^6.4.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-prettier": "^3.1.1",
-    "prettier": "^1.18.2"
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "prettier": "^1.19.1",
+    "serverless": "^1.67.0"
   }
 }
